# python-poetry-vscode-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/workflows/: build.yaml  devcontainer.yaml  python.yaml
fixme_project_name/: __init__.py  __main__.py
tests/: __init__.py  dummy_test.py
